<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_pet_info">

    <fragment
        android:id="@+id/nav_pet_info"
        android:name="com.mheredia.petproject.ui.petInfo.PetInfoFragment"
        android:label="@string/menu_pet_info"
        tools:layout="@layout/fragment_pet_info" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.mheredia.petproject.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_contact"
        android:name="com.mheredia.petproject.ui.contacts.ContactsFragment"
        android:label="@string/menu_contacts"
        tools:layout="@layout/fragment_list" />

    <fragment
        android:id="@+id/nav_reminders"
        android:name="com.mheredia.petproject.ui.reminders.ReminderFragment"
        android:label="@string/reminders"
        tools:layout="@layout/fragment_reminders" />
</navigation>