<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.login.LoginFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_gravity="center"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_textbox"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:hint="@string/prompt_email">

            <!--this is the actual edit text which takes the input-->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_textbox"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_textbox"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:hint="@string/prompt_password">

            <!--this is the actual edit text which takes the input-->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_below="@+id/password_textbox"
            android:layout_centerHorizontal="true"
            android:text="@string/login_button_message" />

        <Button
            android:id="@+id/registration_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_button"
            android:layout_centerHorizontal="true"
            style="@style/Widget.MaterialComponents.Button"
            android:paddingTop="10dp"
            android:text="@string/register" />
    </RelativeLayout>
</FrameLayout>