<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.registration.RegistrationFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_textbox"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:hint="Name">

            <!--this is the actual edit text which takes the input-->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registration_email_textbox"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/name_textbox"
            android:layout_marginBottom="10dp"
            android:hint="@string/prompt_email">

            <!--this is the actual edit text which takes the input-->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registration_email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registration_password_textbox"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/registration_email_textbox"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:hint="@string/prompt_password">

            <!--this is the actual edit text which takes the input-->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registration_password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registration_confirm_password_textbox"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/registration_password_textbox"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:hint="@string/confirm_password">

            <!--this is the actual edit text which takes the input-->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registration_confirm_password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/register_user_button"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/registration_confirm_password_textbox"
            android:layout_centerHorizontal="true"
            android:text="@string/register" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>